Archive2/69/1b80d678b72d1f/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:5:19: error: expected parameter declarator
    std::string s("abc");
                  ^
main.cpp:5:19: error: expected ')'
main.cpp:5:18: note: to match this '('
    std::string s("abc");
                 ^
2 errors generated.
