Archive2/69/1b80d678b72d1f/main.cpp
#include <string>

class C
{
    std::string s("abc");
};

int main()
{
}
